--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10' # install the python version needed
+      - name: install yaml
+        run: pip install yaml
       - name: run validation
         run: python validator.py
