--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -15,6 +15,6 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yaml
+          pip install pyyaml
       - name: run validation
         run: python validator.py
